# wrc20-rust

./: Cargo.toml  Makefile  README.md  chisel.yml  compile.sh  footer.txt  header.txt  wrc20ChallengeFiller.yml
src/: ewasm_token.rs
