[package]
name = "ewasm_token"
version = "0.1.0"
authors = ["cdetrio <cdetrio@gmail.com>", "hugo-dc <jhugodc@gmail.com>"]

[lib]
path = "src/ewasm_token.rs"
crate-type = ["cdylib"]

[dependencies]
ewasm_api = { git = "https://github.com/ewasm/ewasm-rust-api", branch = "master" }

[profile.release]
lto = true
opt-level = 'z'
debug = false