[package]
name = "ewasm_token"
version = "0.1.0"
authors = ["cdetrio <cdetrio@gmail.com>", "hugo-dc <jhugodc@gmail.com>"]

[lib]
path = "src/ewasm_token.rs"
crate-type = ["cdylib"]

[dependencies]
sha3 = "0.8.2"

[dependencies.ewasm_api]
version = "0.9"
default-features = false
features = ["std", "qimalloc"]

[profile.release]
lto = true
opt-level = 'z'
debug = false